[package]
name = "osintxpress"
version = "0.1.0"
edition = "2024"

[lib]
name = "_osintxpress"
crate-type = ["cdylib"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }

arrow = { version = "58.0.0", features = ["pyarrow"] } 

tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3" 
wreq = "6.0.0-rc.28"
wreq-util = "3.0.0-rc.10"
# deboa = "0.0.9"

geo = "0.32.0" 
h3o = "0.9.4" 

pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"]}

tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort" 
strip = true 

[profile.release-local]   # maturin develop --profile release-local  
inherits = "release"
opt-level = 1 
lto = "off"   
codegen-units = 16 
strip = false
debug = true 
