[package]
name = "osintxpress"
version = "0.2.1"
edition = "2024"

[lib]
name = "_osintxpress"
crate-type = ["cdylib"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }

arrow = { version = "58.1.0", default-features = false, features = ["ffi"] }
pyo3-arrow = "0.17.0"

mlt-core = "0.6.0"
geo-types = "0.7.18"

tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"

axum = { version = "0.8.8", features = ["ws"] }
wreq = { version = "6.0.0-rc.28", features = ["ws"] }
wreq-util = "3.0.0-rc.10"

grammers-client = "0.9" 
grammers-session = "0.9"
grammers-mtsender = "0.9"

geoarrow = "0.7"
h3o = "0.9.4" 

pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"]}
pythonize = "0.28.0"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort" 
strip = true 

[profile.release-local]   # maturin develop --profile release-local  
inherits = "release"
opt-level = 1 
lto = "off"   
codegen-units = 16 
strip = false
debug = true 
