[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "osintxpress"
dynamic = ["version"]
description = "High-throughput OSINT ingestion engine for Python"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyarrow >= 23.0.1",
    "polars >= 1.39.2"
]

[project.urls]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
module-name = "osintxpress._osintxpress"
