[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "osintxpress"
dynamic = ["version"]
description = "High-throughput OSINT ingestion engine for Python"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "arro3-core >= 0.8.0",
    # "pyarrow >= 23.0.1"
    ]

[dependency-groups]
test = ["polars >= 1.39.2"]
dashboard = [
    "polars >= 1.39.2",
    "geoarrow-rust-core >= 0.6.1",
    "panel >= 1.8.10",
    "lonboard >= 0.15.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
module-name = "osintxpress._osintxpress"
